src/tests/render_snapshots/snapshots/sabiql__render_snapshots__overlays__help_overlay_long_key_rows.snap
---
source: src/tests/render_snapshots/overlays.rs
assertion_line: 429
expression: output
---
test_project | test_db | - | no dsn | localhost:5432/test                                                                                                            
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│> public.users                         │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  public.posts                         ││(select a table)                                                                                                          │
│  public.comments                      ││                                                                                                                          │
│                        ╭ Help ───────────────────────────────────────────────────────────────────────────────────────────────────────────╮                        │
│                        │  Ctrl+O                                       Open Query History                                               ▲│                        │
│                        │  Esc                                          Return to Normal mode                                            ││                        │
│                        │  ↑↓←→                                         Move cursor                                                      ││                        │
│                        │  Home/End                                     Line start/end                                                   ││                        │
│                        │  Tab                                          Insert tab / Accept completion                                   ││                        │
│                        │  Ctrl+X                                       Open external editor                                             ││                        │
│                        │  :w                                           Preview and confirm UPDATE                                       ││                        │
│                        │  type                                         Edit cell value                                                  ││                        │
│                        │  ←→                                           Move cursor                                                      ││                        │
│                        │  Home/End                                     Jump to start/end                                                ││                        │
│                        │  :                                            Open command line                                                ││                        │
│                        │  Esc                                          Exit to Cell Active (draft preserved)                            ││                        │
│                        │  Home / End                                   Line start/end                                                   ││                        │
│                        │  Enter                                        Execute the confirmed statement                                  ││                        │
│                        │  Esc                                          Cancel and return to editor                                      ││                        │
│                        │                                                                                                                ┃│                        │
│                        │▸ Search / Filter                                                                                               ┃│                        │
│                        │  type                                         Type to filter                                                   ┃│                        │
│                        │  type                                         Type to search                                                   ┃│                        │
│                        │  Enter                                        Confirm search                                                   ┃│────────────────────────┘
│                        │  Esc                                          Cancel search                                                    ┃│────────────────────────┐
│                        │  Ctrl+N / Ctrl+P / ↑ / ↓                      Scroll down / up                                                 ┃│                        │
│                        │  Home / End                                   Jump to top / bottom                                             ┃│                        │
│                        │  Ctrl+D / Ctrl+U                              Scroll half page down / up                                       ┃│                        │
│                        │  Ctrl+F / Ctrl+B / PageDown / PageUp          Scroll full page down / up                                       ││                        │
│                        │  ← / →                                        Scroll left / right                                              ││                        │
│                        │  type                                         Filter help                                                      ││                        │
│                        │  Backspace                                    Edit filter                                                      ││                        │
│                        │  Esc                                          Close help                                                       ││                        │
│                        │  ?                                            Close help                                                       ││                        │
│                        │                                                                                                                ││                        │
│                        │▸ Connections                                                                                                   ││                        │
│                        │  Tab/⇧Tab                                     Next/Previous field                                              ││                        │
│                        │  Tab                                          Next field                                                       ││                        │
│                        │  ⇧Tab                                         Previous field                                                   ││                        │
│                        │  Ctrl+S                                       Save and connect                                                 ││                        │
│                        │  Esc                                          Cancel                                                           ││                        │
│                        │  Enter                                        Toggle dropdown (SSL field)                                      ││                        │
│                        │  Ctrl+N / Ctrl+P / ↑ / ↓                      Dropdown navigation                                              ││                        │
│                        │  Enter                                        Confirm selection                                                ▼│                        │
│                        ╰ type: Filter │ Backspace: Edit │ Esc: Close │ ?: Close ─────────────────────────────────────────────────────────╯                        │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
←→:H-Scroll  ?:Close
