src/tests/render_snapshots/snapshots/sabiql__render_snapshots__overlays__help_overlay_narrow_horizontal_scroll.snap
---
source: src/tests/render_snapshots/overlays.rs
assertion_line: 445
expression: output
---
test_project | test_db | - | no dsn | localhost:54
┌ [1] Explor┐[Info] [Cols] [Idx] [FK] [RLS] [Trig]
│> publi╭ Help ───────────────────────────╮──────┐
│  publi│                             Ope▲│      │
│  publi│                             Ret││      │
│       │                             Mov││      │
│       │                             Lin││      │
│       │                             Ins││      │
│       │                             Ope││      │
│       │                             Pre││      │
│       │                             Edi┃│      │
│       │                             Mov┃│      │
│       │                             Jum││──────┘
│       │                             Ope││──────┐
│       │                             Exi││      │
│       │                             Lin││      │
│       │                             Exe││      │
│       │                             Can││      │
│       │                                ││      │
│       │                                ││      │
│       │                             Typ▼│      │
│       │ x  23% ◀︎────═════─────────────▶︎ │      │
└───────╰ type: Filter │ Backspace: Edit │╯──────┘
←→:H-Scroll  ?:Close
