src/tests/render_snapshots/snapshots/sabiql__render_snapshots__overlays__settings_overlay.snap
---
source: src/tests/render_snapshots/overlays.rs
assertion_line: 470
expression: output
---
test_project | test_db | - | no dsn | localhost:5432/test                                                                                                            
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│> public.users                         │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  public.posts                         ││(select a table)                                                                                                          │
│  public.comments                      ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                ╭ Settings ───────────────────────────────────────────────────────────────────────────────────────╮                                │
│                                │                  │                                                                              │                                │
│                                │  > Appearance    │Theme                                                                         │                                │
│                                │    Keymap        │                                                                              │                                │
│                                │    ER Diagram    │  > Sabiql Dark    saved                                                      │                                │
│                                │    Default Row Co│    Light                                                                     │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │────────────────────────────────┘
│                                │                  │                                                                              │────────────────────────────────┐
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │ Preview ─────────────────────────────────────────────────────────────────────│                                │
│                                │                  │> Active item        Selected row                                             │                                │
│                                │                  │  Secondary text     Muted text                                               │                                │
│                                │                  │╭ Focused panel ─────────────╮                                                │                                │
│                                │                  ││ Primary text  Accent text  │                                                │                                │
│                                │                  │╰────────────────────────────╯                                                │                                │
│                                │                  │Choose a theme that fits your terminal.                                       │                                │
│                                │                  │                                                                              │                                │
│                                ╰ Enter: Apply │ Tab/⇧Tab: Section │ Esc: Cancel ─────────────────────────────────────────────────╯                                │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
Enter:Apply  j/k/↑↓:Select  Tab/⇧Tab:Section  Esc:Cancel
